fixed text overflow edge case

--- a/src/styles.css
+++ b/src/styles.css
@@ -57,6 +57,7 @@ body {
 
 .item-container {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 50px;
@@ -92,6 +93,8 @@ body {
     text-align: left;
     font-family: "Courier new";
     margin: "0 5px 0 5px";
+    display: inline-block;
+    word-break: break-word;
 }
 
 .item-close-button {
